Fix advanced params not showing up in NCWMS

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -730,6 +730,7 @@
 
   .ncwms-root {
     height: 100%;
+    overflow-y: scroll;
   }
   .panel-ncwms-container {
     border: none;
